# zero2prod

./: Cargo.toml
.github/workflows/: general.yml  rust.yml
scripts/: init-db.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
